[gd_scene load_steps=4 format=3 uid="uid://b1dwwft11lh1s"]

[ext_resource type="PackedScene" uid="uid://c5yctegu3uyp4" path="res://src/scenes/CardSlot/CardSlot.tscn" id="1_bjboo"]
[ext_resource type="Script" uid="uid://c5lis1532r7gf" path="res://src/scenes/CombineCardsUI/CombineCardsUi.gd" id="1_xx4gh"]
[ext_resource type="PackedScene" uid="uid://bqnexigap7rvi" path="res://src/scenes/Card/Card.tscn" id="2_xx4gh"]

[node name="CombineCardsUI" type="CanvasLayer" groups=["CardListeners", "CombinationListeners", "TurnPhaseComponents"]]
script = ExtResource("1_xx4gh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -256.0
offset_right = 122.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CardSlot" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_bjboo")]
layout_mode = 2

[node name="EventCard" parent="VBoxContainer/HBoxContainer/CardSlot" instance=ExtResource("2_xx4gh")]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"EventCard"
disabled = true

[node name="CombinedCard_1" parent="VBoxContainer/HBoxContainer/CardSlot" instance=ExtResource("2_xx4gh")]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"CombinedCard"
disabled = true

[node name="CardSlot_2" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_bjboo")]
layout_mode = 2

[node name="PlayerCard" parent="VBoxContainer/HBoxContainer/CardSlot_2" instance=ExtResource("2_xx4gh")]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="CombinedCard_2" parent="VBoxContainer/HBoxContainer/CardSlot_2" instance=ExtResource("2_xx4gh")]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"CombinedCard"
disabled = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CardSlot_3" parent="VBoxContainer/CenterContainer" instance=ExtResource("1_bjboo")]
layout_mode = 2

[node name="NewCombinedCard" parent="VBoxContainer/CenterContainer/CardSlot_3" instance=ExtResource("2_xx4gh")]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"CombinedCard"
disabled = true
